# MS2K_Interface

./: .gitignore  CMakeLists.txt  LICENSE  README.md  launch.bat
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  todo-to-issue.yml
Source/: Main.cpp
Source/midi/: MidiEngine.cpp  MidiEngine.h  MidiMessages.cpp  MidiMessages.h  SysexCodec.cpp  SysexCodec.h
Source/model/: ModSeq.h  ParameterModel.cpp  ParameterModel.h  Program.h
Source/plugin/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/ui/: Components.cpp  Components.h  MS2000LookAndFeel.cpp  MS2000LookAndFeel.h  ModSeqPanel.cpp  ModSeqPanel.h
docs/: MS2000_param_map.md  MS2K_Hardware_Controls.csv  demo_bank.syx  midi_validation_report.csv  synth_bank.syx
installers/: README.md  app.iss  install-app.bat  install-vst3.bat  vst3.iss
tests/: cpp_midi_probe.cpp  gen_demo_bank.cpp  midi_listen.py  midi_validate.py  midi_wizard.py  ms2000_probe.py  test_midi_messages.cpp  test_modseq.cpp  test_param_model.cpp  test_sysex_codec.cpp  verify_all.cpp  verify_modseq_hw.cpp  verify_nrpn.py  verify_send.py
